--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,19 @@
+/*
+   Copyright 2015 Skippbox, Ltd
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+
 /* NAVBAR */
 .navbar {
   -webkit-app-region: drag;
@@ -7,7 +23,7 @@
   padding: 5px;
   border-bottom-color: lightgrey;
   -webkit-transition: all 0.5s ease;
-  left: 100px;
+  z-index: 10;
 }
 .navbar .container {
   width: 100%;
@@ -72,4 +88,12 @@
 .header-search input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color: #808080;
     opacity: 0.8;
+}
+
+.header_dropdown {
+  float: right;
+  margin: 20px 0px;
+  padding: 6px 10px;
+  padding: 20px;
+  height: 28px;
 }
