--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,3 +1,19 @@
+/*
+   Copyright 2015 Skippbox, Ltd
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+
 /* SIDEBAR */
 
 .sidebar {
@@ -10,6 +26,7 @@
   box-shadow: inset -8px 0px 10px -10px;
   -webkit-transition: all 0.5s ease;
   display: flex;
+  z-index: 10;
 }
 .sidebar-links {
   overflow-y: scroll;
@@ -47,27 +64,6 @@
   display: block;
   font-size: 25px;
   margin-bottom: 5px;
-}
-
-.sidebar:not(.open) {
-  left: -200px;
-}
-
-.sidebarOpen section.content {
-  margin-left: 200px;
-}
-
-.sidebar-toggle {
-  display: block;
-  position: fixed;
-  bottom: 10px;
-  left: 15px;
-  font-size: 20px;
-  color: rgba(255, 255, 255, 0.5);
-  cursor: pointer;
-}
-.sidebar:not(.open) .sidebar-toggle {
-  color: rgba(0,0,0,0.5);
 }
 
 /* Close/Minimize/Fullscreen */
