--- a/views/header.html
+++ b/views/header.html
@@ -28,6 +28,7 @@
             <a><i class="fa fa-refresh"></i></a>
           </li>
           <li class="header-search">
+              <i class="fa fa-search search-icon"/>
               <input type="text" ng-model="search" placeholder="search" ng-change="searchString(search);">
           </li>
         </ul>
