--- a/views/k8s/rc.html
+++ b/views/k8s/rc.html
@@ -76,7 +76,7 @@
 
                 </td>
 
-                <td title="'Actions'">
+                <td class="table-actions" title="'Actions'" header-class="'table-actions-header'">
                     <a ng-click="editPressed=!editPressed;editRc(r.id, r.rc);" class="btn btn-info"
                        title="Edit"> <i
                             class="fa fa-edit"></i></a>
