--- a/css/navbar.css
+++ b/css/navbar.css
@@ -67,14 +67,17 @@
   margin-top: -2px;
 }
 
-.header-refresh {
+
+.header-button {
   border: 1px solid lightgrey;
   border-radius: 4px;
   height: 35px;
-  margin-top: 7px;
-  padding: 0px;
   font-size: 16px !important;
   color: #7a7a7a;
+  padding: 0px;
+}
+.header-refresh {
+  margin-top: 7px;
 }
 .header-refresh a {
   padding: 6px 10px 0px 10px !important;
@@ -87,14 +90,9 @@
 }
 
 .header-search {
-  height: 35px;
   width: 240px;
   top: -1px;
   margin: 7px 10px;
-  font-size: 16px !important;
-  color: #7a7a7a;
-  border: 1px solid lightgrey;
-  border-radius: 4px;
 }
 .header-search .search-icon {
   margin: 0px 5px 0px 10px;
@@ -117,10 +115,21 @@
     opacity: 0.8;
 }
 
-.header_dropdown {
-  float: right;
-  margin: 20px 0px;
-  padding: 6px 10px;
-  padding: 20px;
-  height: 28px;
+.header-context {
+  width: 140px;
+  margin: 7px 10px;
+  top: -2px;
+  font-size: 14px !important;
+}
+.header-context:hover {
+  background: whitesmoke;
+}
+.header-context .context-dropdown {
+  width: 100%;
+  height: 100%;
+  border: 0;
+  border-radius: 0;
+  outline: none;
+  cursor: pointer;
+  background: transparent !important;
 }
