--- a/views/k8s/pods.html
+++ b/views/k8s/pods.html
@@ -15,25 +15,28 @@
 -->
 <section class="content" ng-controller="podController as podc">
     <div class="button-row">
-     <a ng-click="newPod=!newPod"><i class="btn btn-success fa fa-plus"> Create Pod </i></a>
+      <a ng-hide="newPod" ng-click="newPod=!newPod"><i class="btn btn-success fa fa-plus"> Create Pod </i></a>
     </div>
 
-    <div class="row">
-        <div class="col-sm-12" ng-if="newPod">
+    <div class="row form-new" ng-if="newPod">
+        <form ng-submit="createPod(npStr, yaml);">
+            <div class="form-group">
+              <textarea id="jsonTextarea1" ng-model="npStr" class="ng-pristine ng-valid form-control"
+                        placeholder="Pod Definition in JSON or YAML format."/>
+              <hr/>
+              <span class="actions-row">
+                  <button class="btn btn-link" ng-click="cancelCreateBtn();">Cancel</button>
+                  <button class="btn btn-success" type="submit">Create</button>
+              </span>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" g-model="yaml" name="yaml">
+                  YAML
+                </label>
+              </div>
 
-            <form ng-submit="createPod(npStr, yaml);">
-                <textarea id="jsonTextarea1" ng-model="npStr" class="ng-pristine ng-valid form-control edit_textarea"
-                          placeholder="Pod Definition in JSON or YAML format." ></textarea>
-                <span style="float: right"> <input type="checkbox"
-                       ng-model="yaml"
-                       name="yaml"
-                        > YAML</span>
-                <br/>
-                <button class="btn cancel_button" ng-click="cancelCreateBtn();"><i class="glyphicon glyphicon-remove"> </i></button>
-                <button class="btn-small valid_button" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
-
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
 
     <div class="row table-container" ng-if="podsReady">
@@ -70,7 +73,7 @@
                 </td>
 
                 <td class="table-actions" title="'Actions'" header-class="'table-actions-header'">
-                    <a ng-click="editPressed=!editPressed;editPod(p.id, p.pod);" class="btn btn-info" title="Edit"> <i
+                    <a ng-click="editPressed=!editPressed;editPod(p.id, p.pod);" class="btn btn-primary" title="Edit"> <i
                             class="fa fa-edit"></i></a>
                     <a ng-click="delete(p.pod.metadata.name);" class="btn btn-warning" title="delete"> <i
                             class="fa fa-trash"></i></a>
