--- a/views/k8s/services.html
+++ b/views/k8s/services.html
@@ -15,23 +15,28 @@
 -->
 <section class="content" ng-controller="servicesController as servicesco">
     <div class="button-row">
-        <a ng-click="newService=!newService"><i class="btn btn-success fa fa-plus"> Create Service </i></a>
+        <a ng-hide="newService" ng-click="newService=!newService"><i class="btn btn-success fa fa-plus"> Create Service </i></a>
     </div>
 
-    <div class="row">
-        <div class="col-sm-12" ng-if="newService">
-            <form ng-submit="createService(npStr, yaml);">
-                <textarea id="jsonTextarea1" ng-model="npStr" class="ng-pristine ng-valid form-control"
-                        ></textarea>
-                <span style="float: right"> <input type="checkbox"
-                       ng-model="yaml"
-                       name="yaml"
-                        > YAML</span>
-                <br/>
-                <button class="btn cancel_button" ng-click="cancelCreateBtn();"><i class="glyphicon glyphicon-remove"> </i></button>
-                <button class="btn-small valid_button" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
-            </form>
-        </div>
+    <div class="row form-new" ng-if="newService">
+        <form ng-submit="createService(npStr, yaml);">
+            <div class="form-group">
+              <textarea id="jsonTextarea1" ng-model="npStr" class="ng-pristine ng-valid form-control"
+                        placeholder="Service definition in JSON or YAML format."/>
+              <hr/>
+              <span class="actions-row">
+                  <button class="btn btn-link" ng-click="cancelCreateBtn();">Cancel</button>
+                  <button class="btn btn-success" type="submit">Create</button>
+              </span>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" g-model="yaml" name="yaml">
+                  YAML
+                </label>
+              </div>
+
+            </div>
+        </form>
     </div>
 
     <div class="row table-container">
@@ -67,7 +72,7 @@
 
 
             <td class="table-actions" title="'Actions'" header-class="'table-actions-header'">
-                <a ng-click="editPressed=!editPressed;editService(s.id, s.service);" class="btn btn-info"
+                <a ng-click="editPressed=!editPressed;editService(s.id, s.service);" class="btn btn-primary"
                    title="Edit"> <i
                         class="fa fa-edit"></i></a>
                 <!--<a ng-click="start(s.metadata.name);showservices=!showservices" class="btn btn-info" title="start"> <i class="fa fa-play"></i></a>-->
