--- a/views/k8s/machines.html
+++ b/views/k8s/machines.html
@@ -41,7 +41,7 @@
                   <div class="input-group">
                     <input class="form-control" id="inputMachineName" ng-model="newMachineNameDO" type="string" placeholder="Name" ng-required="true">
                     <span class="input-group-btn">
-                      <button class="btn" ng-click="createMachine('digitalocean', newMachineNameDO)"><i class="glyphicon glyphicon-ok"> </i></button>
+                      <button class="btn btn-primary" ng-click="createMachine('digitalocean', newMachineNameDO)"><i class="glyphicon glyphicon-ok"> </i></button>
                     </span>
                   </div>
                 </div>
@@ -54,7 +54,7 @@
                   <div class="input-group">
                     <input class="form-control" id="inputMachineName" ng-model="newMachineNameAWS" type="string" placeholder="Name" ng-required="true">
                     <span class="input-group-btn">
-                      <button class="btn" ng-click="createMachine('amazonec2', newMachineNameAWS)"><i class="glyphicon glyphicon-ok"> </i></button>
+                      <button class="btn btn-primary" ng-click="createMachine('amazonec2', newMachineNameAWS)"><i class="glyphicon glyphicon-ok"> </i></button>
                     </span>
                   </div>
                 </div>
@@ -67,7 +67,7 @@
                   <div class="input-group">
                     <input class="form-control" id="inputMachineName" ng-model="newMachineNameExoscale" type="string" placeholder="Name" ng-required="true">
                     <span class="input-group-btn">
-                      <button class="btn" ng-click="createMachine('exoscale', newMachineNameExoscale)"><i class="glyphicon glyphicon-ok"> </i></button>
+                      <button class="btn btn-primary" ng-click="createMachine('exoscale', newMachineNameExoscale)"><i class="glyphicon glyphicon-ok"> </i></button>
                     </span>
                   </div>
                 </div>
@@ -80,7 +80,7 @@
                   <div class="input-group">
                     <input class="form-control" id="inputMachineName" ng-model="newMachineNameVB" type="string" placeholder="Name" ng-required="true">
                     <span class="input-group-btn">
-                      <button class="btn" ng-click="createMachine('virtualbox', newMachineNameVB)"><i class="glyphicon glyphicon-ok"> </i></button>
+                      <button class="btn btn-primary" ng-click="createMachine('virtualbox', newMachineNameVB)"><i class="glyphicon glyphicon-ok"> </i></button>
                     </span>
                   </div>
                 </div>
